--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <p class="text-center muted-text mt-3 mb-4">
                 Voici quelques-unes des technologies que j’utilise actuellement dans mon stack :
             </p>
-            <div class="row justify-content-center row-cols-2 row-cols-md-3 row-cols-lg-6 mt-4 gy-4 skills-container" data-aos="fade-up" data-aos-delay="200">
+            <div class="row justify-content-center row-cols-2 row-cols-md-3 row-cols-lg-3 mt-4 gy-4 skills-container" data-aos="fade-up" data-aos-delay="200">
                 <div class="col">
                     <div class="skill">
                         <img class="skill-image" src="/assets/images/skills/HTML.svg" alt="HTML">
@@ -294,12 +294,12 @@
                         <p class="skill-name">laravel</p>
                     </div>
                 </div>
-                <div class="col">
+                <!-- <div class="col">
                     <div class="skill">
                         <img class="skill-image" src="/assets/images/skills/Bootstrap.svg" alt="Bootstrap">
                         <p class="skill-name">Bootstrap</p>
                     </div>
-                </div>
+                </div> -->
                 <div class="col">
                     <!-- <div class="skill">
                         <img class="skill-image" src="/assets/images/skills/C.svg" alt="Langage C">
